--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <th>city</th>
     <th>chicago</th>
     <th>New york</th>
-    <th>los Angeles</th>
+    <th>charlotte</th>
 
     </tr>
     <tr>
